# M-MAD

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_stage1.sh  run_stage2_3.sh  stage1.sh
.github/workflows/: ci.yml
code/: few_shot_demos_ja.py  jury_report.py  prepare_input.py  run_jury.py  stage1.py  stage2_3.py
code/utils/: agent.py  config.py  openai_utils.py
doc/: README.md  architecture.md  configuration.md  contributing.md  data-format.md  meta-evaluation.md  mqm-glossary.md  prompts-and-fewshot.md  setup-ai-studio.md  setup-vertex-adc.md  test-design.md  usage.md
tests/: conftest.py  test_agent.py  test_config.py  test_jury_report.py  test_openai_utils.py  test_prepare_input.py  test_run_jury.py  test_stage1.py  test_stage1_debate.py  test_stage2_3.py
